# takehomeproject

./: README.md  REPORT.md  pyproject.toml  train.sh
assets/processed/: data.parquet  data_unmapped.parquet  test.parquet  train.parquet
income_takehome/src/: evaluate.py  preprocessing.py  selectors.py  train_classification.py  utils.py
jpmc_takehome/src/: config.py  segmentation.py
mlruns/0/: meta.yaml
mlruns/867378909697366650/: meta.yaml
mlruns/867378909697366650/4698113a6c7c49d0821b93a89f38a7f0/: meta.yaml
mlruns/867378909697366650/4698113a6c7c49d0821b93a89f38a7f0/metrics/: avg_fit_time  avg_score_time  cv_average_precision  cv_f1_weighted  cv_neg_log_loss  cv_partial_auc  cv_roc_auc  loss
mlruns/867378909697366650/4698113a6c7c49d0821b93a89f38a7f0/params/: learning_rate  subsample
mlruns/867378909697366650/4698113a6c7c49d0821b93a89f38a7f0/tags/: mlflow.runName
mlruns/867378909697366650/694b10f5ac9c48a99a76f18df69560e2/: meta.yaml
mlruns/867378909697366650/694b10f5ac9c48a99a76f18df69560e2/artifacts/: selected_features.json
mlruns/867378909697366650/694b10f5ac9c48a99a76f18df69560e2/metrics/: avg_fit_time  avg_score_time  cv_average_precision  cv_f1_weighted  cv_neg_log_loss  cv_partial_auc  cv_roc_auc  loss
mlruns/867378909697366650/694b10f5ac9c48a99a76f18df69560e2/params/: colsample_bytree
mlruns/867378909697366650/694b10f5ac9c48a99a76f18df69560e2/tags/: mlflow.runName
mlruns/867378909697366650/6b0d44ab0c83496f9f02479dcbb6da8a/: meta.yaml
mlruns/867378909697366650/bc9cd4e68ec741648fedc1d92fdeea14/: meta.yaml
mlruns/867378909697366650/cbe5ed31eb644cc086b36ac55a0cdf3e/: meta.yaml
mlruns/models/xgb_all__stop_auc_tune_hyperopt/: meta.yaml
mlruns/models/xgb_select_20_by_extra-trees__stop_auc_tune_hyperopt/: meta.yaml
mlruns/models/xgb_select_20_by_minfo__stop_auc_tune_hyperopt/: meta.yaml
mlruns/models/xgb_select_25_by_extra-trees__stop_auc_tune_hyperopt/: meta.yaml
results/segmentation_rules/: SUMMARY.json  rule_segments.parquet  segment_profiles.parquet
sandbox/: EDA.ipynb
(+136 files in other folders)
