[project]
name = "jpmc-takehome"
version = "0.1.0"
description = ""
authors = [
    {name = "tzy",email = "rachel.tzy0428@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.5.1,<4.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "imblearn (>=0.0,<0.1)",
    "click (>=8.3.0,<9.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
preprocess = "jpmc_takehome.src.preprocessing:main"
train-classification = "jpmc_takehome.src.train_classification:train"
evaluate = "jpmc_takehome.src.evaluate:evaluate"
segment = "jpmc_takehome.src.segmentation:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
